fixed carousel on mobile phones

--- a/src/stylings/Image.css
+++ b/src/stylings/Image.css
@@ -77,11 +77,11 @@
 }
 
 @media (max-width: 768px) {
-    .image{
+    .image, .showcase{
         width: 300px;
         height: 500px;
     }
-    .image img {
+    .image img, .showcase img {
         width: 300px;
         height: 500px;
     }
